implement message and dialog.
